tests/fixtures/errors/bare_variant_binding.z
# E0300: a bare variant name does not construct; select an arm.
color: variant {
    red: null
    green: null
}

main: function is {
    c: color
    print "\{c.red}"
}
